# hfm

./: .clang-format  .clang-tidy  CMakeLists.txt  LICENSE
.github/workflows/: build.yml  test.yml
scripts/: format.sh  test.sh
src/: CMakeLists.txt  hfm.c  hfm.h  huffman_tree.c  huffman_tree.h  main.c
test/: CMakeLists.txt  test_compress_decompress.c
